syntax = "proto3"
package echo;

service EchoService {
  rpc Echo(EchoReq) returns (EchoResp);
};

message EchoReq {
  string msg = 1;
}

message EchoResp {
  string msg = 1;
}
